# rec-study

./: .gitignore  pyproject.toml
notebook/: Popularity.ipynb  Random.ipynb  eda.ipynb  my-rec.ipynb
src/: imf.py  popularity.py
util/: data_loader.py  models.py
